--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-#Sometimes I just dont care. :(
-title: Wferr
-description: Blog, Links, Life, whatever else wferr does.
-url: "http://wferr.com"
+title: Million Digits of Everything
+description: The first million digits of the most common math expressions.
+url: "http://milliondigits.com"
