--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Million Digits of Everything
-description: The first million digits of the most common math expressions.
+description: The first million digits of the most common math expressions. Currently Pi, Phi, root 2, root 3, and e are on here!
 url: "http://milliondigits.com"
